@@ -20,6 +20,7 @@ S3method(logLik,brmsfit)
 S3method(log_lik,brmsfit)
 S3method(loo,brmsfit)
 S3method(marginal_effects,brmsfit)
+S3method(marginal_smooths,brmsfit)
 S3method(model.frame,brmsfit)
 S3method(ngrps,brmsfit)
 S3method(nobs,brmsfit)
@@ -102,6 +103,7 @@ export(loo)
 export(make_stancode)
 export(make_standata)
 export(marginal_effects)
+export(marginal_smooths)
 export(negbinomial)
 export(ngrps)
 export(parnames)
