@@ -1333,10 +1333,107 @@ marginal_effects.brmsfit <- function(x, effects = NULL, conditions = NULL,
     attr(marg_res, "effects") <- effects[[i]]
     point_args <- nlist(mf, effects = effects[[i]], conditions,
                         groups = get_random(ee)$group, family = x$family)
-    # see brmsfit-helpers.R
     attr(marg_res, "points") <- do.call(make_point_frame, point_args)
     results[[paste0(effects[[i]], collapse = ":")]] <- marg_res
   }
+  class(results) <- "brmsMarginalEffects"
+  results
+}
+
+#' @rdname marginal_smooths
+#' @export
+marginal_smooths.brmsfit <- function(x, smooths = NULL,
+                                     probs = c(0.025, 0.975), ...) {
+  contains_samples(x)
+  x <- restructure(x)
+  mf <- model.frame(x)
+  conditions <- prepare_conditions(x)
+  smooths <- rename(as.character(smooths), " ", "")
+  ee <- extract_effects(formula(x), family = family(x))
+  if (length(ee$nonlinear)) {
+    lee <- ee$nonlinear
+    type <- rep("nlp", length(ee$nonlinear))
+  } else {
+    resp <- ee$response
+    if (length(resp) > 1L) {
+      lee <- setNames(rep(ee, 3), resp)
+      type <- rep("resp", length(resp))
+    } else {
+      lee <- list(ee)
+      type <- ""
+    }
+  }
+  auxpars <- intersect(names(ee), auxpars())
+  lee <- c(lee, ee[auxpars])
+  type <- c(type, rep("ap", length(auxpars)))
+  
+  args <- nlist(x, smooths_only = TRUE, allow_new_levels = TRUE,
+                incl_autocor = FALSE, f = prepare_family(x), 
+                nsamples = Nsamples(x))
+  multiple_covars <- FALSE
+  results <- list()
+  for (k in seq_along(lee)) {
+    # loop over elements that may contain smooth terms
+    splines <- get_spline_labels(lee[[k]])
+    covars <- get_spline_labels(lee[[k]], covars = TRUE, combine = FALSE)
+    for (i in seq_along(splines)) {
+      # loop over smooth terms and compute their predictions
+      ncovars <- length(covars[[i]])
+      if (ncovars > 1L) {
+        multiple_covars <- TRUE
+      }
+      include_spline <- !length(smooths) || splines[[i]] %in% smooths
+      if (include_spline && ncovars <= 1L) {
+        values <- named_list(covars[[i]])
+        for (cv in names(values)) {
+          values[[cv]] <- seq(min(mf[[cv]]), max(mf[[cv]]), length.out = 100)
+        }
+        newdata <- data.frame(values)
+        other_vars <- setdiff(names(conditions), covars[[i]])
+        newdata[, other_vars] <- conditions[1, other_vars]
+        if (type[k] == "nlp") {
+          nlpar <- names(lee[k])
+          rhs_formula <- attr(x$formula, "nonlinear")[[nlpar]]
+          more_args <- list(rhs_formula = rhs_formula, nlpar = nlpar)
+        } else if (type[k] == "ap") {
+          ap <- names(lee[k])
+          more_args <- list(rhs_formula = attr(x$formula, ap), nlpar = ap)
+        } else if (type[k] == "resp") {
+          r <- names(lee[k])
+          more_args <- list(attr_formula = list(response = r), nlpar = r)
+        } else {
+          more_args <- NULL
+        }
+        more_args <- c(more_args, nlist(newdata))
+        draws <- do.call(.extract_draws, c(args, more_args))
+        sc <- attr(draws$data[["X"]], "smooth_cols")
+        draws$data[["X"]] <- draws$data[["X"]][, sc[[i]], drop = FALSE]
+        draws[["b"]] <- draws[["b"]][, sc[[i]], drop = FALSE]
+        draws[["Zs"]] <- draws[["Zs"]][i] 
+        draws[["s"]] <- draws[["s"]][i]
+        eta <- get_eta(i = NULL, draws = draws)
+        eta <- get_summary(eta, robust = TRUE, probs = probs)
+        colnames(eta)[3:4] <- c("lowerCI", "upperCI")
+        res <- cbind(newdata[, covars[[i]], drop = FALSE], eta)
+        response <- splines[[i]]
+        if (isTRUE(nzchar(names(lee)[k]))) {
+          response <- paste0(names(lee)[k], ": ", response)
+        }
+        attr(res, "response") <- response
+        attr(res, "effects") <- covars[[i]]
+        attr(res, "points") <- mf[, covars[[i]], drop = FALSE]
+        results[[response]] <- res
+      }
+    }
+  }
+  if (!length(results)) {
+    stop2("No valid smooth terms found in the model.")
+  }
+  if (multiple_covars) {
+    warning2("Smooth terms with more than one covariate ",  
+             "are not yet supported by 'marginal_smooths'.")
+  }
+  attr(results, "smooths_only") <- TRUE
   class(results) <- "brmsMarginalEffects"
   results
 }
